--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/homeStage.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/homeStage.fxml
@@ -14,81 +14,104 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="800.0" maxWidth="900.0" minHeight="800.0" minWidth="900.0" prefHeight="800.0" prefWidth="900.0" style="-fx-border-color: #de5f4f; -fx-border-width: 7; -fx-background-color: #fdf3ea;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.HomeController">
-   <children>
-      <ImageView fx:id="imageLibriSfondo" fitHeight="795.0" fitWidth="900.0" layoutX="3.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
-      </ImageView>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fcf3eb" height="665.0" layoutX="91.0" layoutY="92.0" stroke="#de5f4f" strokeWidth="2.0" width="708.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fcf3eb" height="59.0" layoutX="91.0" layoutY="24.0" stroke="#de5f4f" strokeWidth="2.0" width="708.0" />
-      <Button layoutX="428.0" layoutY="721.0" mnemonicParsing="false" onAction="#logOff" style="-fx-background-color: #2b2d30;" text="Log off" textFill="WHITE" />
-      <TextField fx:id="idBarSearch" layoutX="298.0" layoutY="130.0" />
-      <Button defaultButton="true" layoutX="707.0" layoutY="22.0" mnemonicParsing="false" onAction="#goToInfoUser" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Info Utente" textFill="#2b2d30" underline="true">
-         <font>
-            <Font size="14.0" />
-         </font>
-         <cursor>
-            <Cursor fx:constant="OPEN_HAND" />
-         </cursor>
-      </Button>
-      <Button layoutX="607.0" layoutY="130.0" mnemonicParsing="false" onAction="#Select" style="-fx-background-color: #2b2d30;" text="Cerca" textFill="WHITE" />
-      <ComboBox fx:id="idComboBox" layoutX="450.0" layoutY="130.0" prefWidth="150.0" />
-      <TableView fx:id="libroTableView" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
-        <columns>
-          <TableColumn fx:id="isbnColumn" prefWidth="95.9999771118164" text="ISBN" />
-          <TableColumn fx:id="titoloColumn" prefWidth="300.6666717529297" text="Titolo" />
-            <TableColumn fx:id="autoreColumn" prefWidth="104.66671752929688" text="Autore" />
-            <TableColumn fx:id="editoreColumn" prefWidth="105.33331298828125" text="Editore" />
-            <TableColumn fx:id="genereColumn" prefWidth="75.3333740234375" text="Genere" />
-        </columns>
-         <contextMenu>
-            <ContextMenu>
-               <items>
-                  <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaLibro" text="Vai Alla Pagina Informativa Libro" />
-                  <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaSerie" text="Vai Alla Pagina Informativa Serie" />
-               </items>
-            </ContextMenu>
-         </contextMenu>
-      </TableView>
-      <Button fx:id="buttonLibro" layoutX="118.0" layoutY="130.0" mnemonicParsing="false" onAction="#selezioneLibro" prefHeight="25.0" prefWidth="58.0" style="-fx-background-color: #2b2d30;" text="Libro" textFill="WHITE" />
-      <Button fx:id="buttonArticolo" layoutX="198.0" layoutY="130.0" mnemonicParsing="false" onAction="#selezioneArticolo" style="-fx-background-color: #2b2d30;" text="Articolo" textFill="WHITE" />
-      <TableView fx:id="articoloTableView" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
-         <columns>
-            <TableColumn fx:id="doiColumn" prefWidth="95.9999771118164" text="DOI" />
-            <TableColumn fx:id="titoloAColumn" prefWidth="300.6666717529297" text="Titolo" />
-            <TableColumn fx:id="autoreAColumn" prefWidth="104.66671752929688" text="Autore" />
-            <TableColumn fx:id="editoreAColumn" prefWidth="105.33331298828125" text="Editore" />
-            <TableColumn fx:id="genereAColumn" prefWidth="75.3333740234375" text="Genere" />
-         </columns>
-         <contextMenu>
-            <ContextMenu>
-               <items>
-                  <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaArticolo" text="Vai Alla Pagina Informativa Articolo" />
-               </items>
-            </ContextMenu>
-         </contextMenu>
-      </TableView>
-      <Text layoutX="130.0" layoutY="119.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cosa Vuoi ricercare ?" wrappingWidth="136.91082000732422" />
-      <Text layoutX="308.0" layoutY="176.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Premi Con Il Tasto Destro Del Mouse Per Le Azioni" wrappingWidth="277.5774459838867" />
-      <Button layoutX="669.0" layoutY="130.0" mnemonicParsing="false" onAction="#clearTableView" style="-fx-background-color: #2b2d30;" text="Clear" textFill="WHITE" />
-      <Button defaultButton="true" layoutX="677.0" layoutY="47.0" mnemonicParsing="false" onAction="#goToNotifiche" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Notifiche Utente" textFill="#2b2d30" underline="true">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Button>
-      <Text fill="#2b2d30" layoutX="102.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pannello Ricerca " wrappingWidth="278.8033332824707">
-         <font>
-            <Font name="System Bold" size="24.0" />
-         </font>
-      </Text>
-      <Text fill="#2b2d30" layoutX="102.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Qui potrai effettuare ricerche per visualizzare Libri e Articoli Scientifici">
-         <font>
-            <Font name="Arial" size="17.0" />
-         </font>
-      </Text>
-      <Text fx:id="txtNumeroNotifiche" fill="#de5f4f" layoutX="674.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-      </Text>
-   </children>
+<AnchorPane maxHeight="800.0" maxWidth="900.0" minHeight="800.0" minWidth="900.0" prefHeight="800.0" prefWidth="900.0"
+            style="-fx-border-color: #de5f4f; -fx-border-width: 7; -fx-background-color: #fdf3ea;"
+            xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.example.bibliotecadigitale.Controller.HomeController">
+   <ImageView fx:id="imageLibriSfondo" fitHeight="795.0" fitWidth="900.0" layoutX="3.0" layoutY="3.0"
+              pickOnBounds="true" preserveRatio="true">
+   </ImageView>
+   <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fcf3eb" height="665.0" layoutX="91.0" layoutY="92.0"
+              stroke="#de5f4f" strokeWidth="2.0" width="708.0"/>
+   <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fcf3eb" height="59.0" layoutX="91.0" layoutY="24.0" stroke="#de5f4f"
+              strokeWidth="2.0" width="708.0"/>
+   <Button layoutX="428.0" layoutY="721.0" mnemonicParsing="false" onAction="#logOff"
+           style="-fx-background-color: #2b2d30;" text="Log off" textFill="WHITE"/>
+   <TextField fx:id="idBarSearch" layoutX="298.0" layoutY="130.0"/>
+   <Button defaultButton="true" layoutX="707.0" layoutY="22.0" mnemonicParsing="false" onAction="#goToInfoUser"
+           style="-fx-background-color: transparent; -fx-cursor: hand;" text="Info Utente" textFill="#2b2d30"
+           underline="true">
+      <font>
+         <Font size="14.0"/>
+      </font>
+      <cursor>
+         <Cursor fx:constant="OPEN_HAND"/>
+      </cursor>
+   </Button>
+   <Button layoutX="607.0" layoutY="130.0" mnemonicParsing="false" onAction="#Select"
+           style="-fx-background-color: #2b2d30;" text="Cerca" textFill="WHITE"/>
+   <ComboBox fx:id="idComboBox" layoutX="450.0" layoutY="130.0" prefWidth="150.0"/>
+   <TableView fx:id="libroTableView" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0"
+              prefWidth="700.0">
+      <columns>
+         <TableColumn fx:id="isbnColumn" prefWidth="95.9999771118164" text="ISBN"/>
+         <TableColumn fx:id="titoloColumn" prefWidth="300.6666717529297" text="Titolo"/>
+         <TableColumn fx:id="autoreColumn" prefWidth="104.66671752929688" text="Autore"/>
+         <TableColumn fx:id="editoreColumn" prefWidth="105.33331298828125" text="Editore"/>
+         <TableColumn fx:id="genereColumn" prefWidth="75.3333740234375" text="Genere"/>
+      </columns>
+      <contextMenu>
+         <ContextMenu>
+            <items>
+               <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaLibro"
+                         text="Vai Alla Pagina Informativa Libro"/>
+               <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaSerie"
+                         text="Vai Alla Pagina Informativa Serie"/>
+            </items>
+         </ContextMenu>
+      </contextMenu>
+   </TableView>
+   <Button fx:id="buttonLibro" layoutX="118.0" layoutY="130.0" mnemonicParsing="false" onAction="#selezioneLibro"
+           prefHeight="25.0" prefWidth="58.0" style="-fx-background-color: #2b2d30;" text="Libro" textFill="WHITE"/>
+   <Button fx:id="buttonArticolo" layoutX="198.0" layoutY="130.0" mnemonicParsing="false" onAction="#selezioneArticolo"
+           style="-fx-background-color: #2b2d30;" text="Articolo" textFill="WHITE"/>
+   <TableView fx:id="articoloTableView" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0"
+              prefWidth="700.0">
+      <columns>
+         <TableColumn fx:id="doiColumn" prefWidth="95.9999771118164" text="DOI"/>
+         <TableColumn fx:id="titoloAColumn" prefWidth="300.6666717529297" text="Titolo"/>
+         <TableColumn fx:id="autoreAColumn" prefWidth="104.66671752929688" text="Autore"/>
+         <TableColumn fx:id="editoreAColumn" prefWidth="105.33331298828125" text="Editore"/>
+         <TableColumn fx:id="genereAColumn" prefWidth="75.3333740234375" text="Genere"/>
+      </columns>
+      <contextMenu>
+         <ContextMenu>
+            <items>
+               <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaArticolo"
+                         text="Vai Alla Pagina Informativa Articolo"/>
+            </items>
+         </ContextMenu>
+      </contextMenu>
+   </TableView>
+   <Text layoutX="130.0" layoutY="119.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cosa Vuoi ricercare ?"
+         wrappingWidth="136.91082000732422"/>
+   <Text layoutX="308.0" layoutY="176.0" strokeType="OUTSIDE" strokeWidth="0.0"
+         text="Premi Con Il Tasto Destro Del Mouse Per Le Azioni" wrappingWidth="277.5774459838867"/>
+   <Button layoutX="669.0" layoutY="130.0" mnemonicParsing="false" onAction="#clearTableView"
+           style="-fx-background-color: #2b2d30;" text="Clear" textFill="WHITE"/>
+   <Button defaultButton="true" layoutX="677.0" layoutY="47.0" mnemonicParsing="false" onAction="#goToNotifiche"
+           style="-fx-background-color: transparent; -fx-cursor: hand;" text="Notifiche Utente" textFill="#2b2d30"
+           underline="true">
+      <font>
+         <Font size="14.0"/>
+      </font>
+   </Button>
+   <Text fill="#2b2d30" layoutX="102.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pannello Ricerca "
+         wrappingWidth="278.8033332824707">
+      <font>
+         <Font name="System Bold" size="24.0"/>
+      </font>
+   </Text>
+   <Text fill="#2b2d30" layoutX="102.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0"
+         text="Qui potrai effettuare ricerche per visualizzare Libri e Articoli Scientifici">
+      <font>
+         <Font name="Arial" size="17.0"/>
+      </font>
+   </Text>
+   <Text fx:id="txtNumeroNotifiche" fill="#de5f4f" layoutX="674.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0"
+         text="0">
+      <font>
+         <Font name="System Bold" size="14.0"/>
+      </font>
+   </Text>
 </AnchorPane>
