--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/paginaInformativaLibro.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/paginaInformativaLibro.fxml
@@ -1,90 +1,103 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="900.0" style="-fx-background-color: #fdf3ea; -fx-border-color: #964B00;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.LibroInformativaController">
-   <children>
-      <ImageView fx:id="imageLibriSfondo" fitHeight="795.0" fitWidth="900.0" layoutX="3.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
-      </ImageView>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fdf3ea" height="650.0" layoutX="147.0" layoutY="104.0" stroke="#de5f4f" strokeType="INSIDE" style="-fx-background-color: #fdf3ea;" width="700.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="100.0" />
-      <Button layoutX="583.0" layoutY="725.0" mnemonicParsing="false" onAction="#goToHome" style="-fx-background-color: #2b2d30; " text="Go Back" textFill="WHITE" />
-      <Text fx:id="textTitleIId" layoutX="103.0" layoutY="116.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Titolo:" textAlignment="CENTER" wrappingWidth="700.0" AnchorPane.leftAnchor="102.0" AnchorPane.topAnchor="102.0">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font></Text>
-      <Text id="ISbn" fx:id="textIsbnId" layoutX="101.0" layoutY="480.94921875" strokeType="OUTSIDE" strokeWidth="0.0" text="Isbn:" wrappingWidth="700.0" AnchorPane.topAnchor="467.0">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font></Text>
-      <Text id="Genere" fx:id="textGenereId" layoutX="101.0" layoutY="504.94921875" strokeType="OUTSIDE" strokeWidth="0.0" text="Genere:" wrappingWidth="700.0" AnchorPane.topAnchor="491.0">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font></Text>
-      <Text id="Numero pagine" fx:id="textNumeroPagineId" layoutX="101.0" layoutY="480.94921875" strokeType="OUTSIDE" strokeWidth="0.0" text="Numero pagine:" textAlignment="RIGHT" wrappingWidth="700.0" AnchorPane.topAnchor="467.0">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font></Text>
-      <Text id="tipoA" fx:id="textTIpoId" layoutX="101.0" layoutY="504.94921875" strokeType="OUTSIDE" strokeWidth="0.0" text="Tipo:" textAlignment="RIGHT" wrappingWidth="700.0" AnchorPane.topAnchor="491.0">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font></Text>
-      <Text id="Materia" fx:id="textMateriaId" layoutX="101.0" layoutY="604.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Materia:" visible="false" wrappingWidth="700.0" AnchorPane.topAnchor="591.0">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font></Text>
-      <Text id="Descrizione" fx:id="textDescrizioneId" layoutX="101.0" layoutY="168.94921875" strokeType="OUTSIDE" strokeWidth="0.0" text="Descrizione:" textAlignment="JUSTIFY" wrappingWidth="700.0" AnchorPane.topAnchor="155.0">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font></Text>
-      <Text id="fruizione" fx:id="textFruizioneId" layoutX="101.0" layoutY="533.94921875" strokeType="OUTSIDE" strokeWidth="0.0" text="Fruizione:" textAlignment="RIGHT" wrappingWidth="700.0" AnchorPane.topAnchor="520.0">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font></Text>
-      <Text id="Data uscita" fx:id="textDataUscitaId" layoutX="101.0" layoutY="569.94921875" strokeType="OUTSIDE" strokeWidth="0.0" text="Data Uscita:" wrappingWidth="700.0" AnchorPane.topAnchor="556.0">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font></Text>
-      <Text id="Lingua" fx:id="textLinguianId" layoutX="101.0" layoutY="569.94921875" strokeType="OUTSIDE" strokeWidth="0.0" text="Lingua:" textAlignment="RIGHT" wrappingWidth="700.0" AnchorPane.topAnchor="556.0">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font></Text>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="900.0" style="-fx-background-color: #fdf3ea; -fx-border-color: #964B00;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.LibroInformativaController">
+   <ImageView fx:id="imageLibriSfondo" fitHeight="795.0" fitWidth="900.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+   </ImageView>
+   <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fdf3ea" height="524.0" layoutX="106.66666666666666" layoutY="108.66666666666666" stroke="#de5f4f" strokeType="INSIDE" style="-fx-background-color: #fdf3ea;" width="700.0" AnchorPane.bottomAnchor="169.0" AnchorPane.leftAnchor="105.0" AnchorPane.rightAnchor="95.0" AnchorPane.topAnchor="107.0" />
+   <Button layoutX="427.0" layoutY="596.0" mnemonicParsing="false" onAction="#goToHome" style="-fx-background-color: #2b2d30; " text="Go Back" textFill="WHITE" />
+   <Text fx:id="textTitleIId" layoutX="119.0" layoutY="128.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Titolo:" textAlignment="CENTER" wrappingWidth="687.3334350585938" AnchorPane.leftAnchor="119.0" AnchorPane.topAnchor="115.05078125">
+      <font>
+         <Font name="System Bold" size="12.0" />
+      </font>
+   </Text>
+   <Text id="ISbn" fx:id="textIsbnId" layoutX="120.0" layoutY="452.61588541666663" strokeType="OUTSIDE" strokeWidth="0.0" text="Isbn:" wrappingWidth="222.66665649414074" AnchorPane.topAnchor="439.66666666666663">
+      <font>
+         <Font name="System Bold" size="12.0" />
+      </font>
+   </Text>
+   <Text id="Genere" fx:id="textGenereId" layoutX="120.0" layoutY="409.66666666666663" strokeType="OUTSIDE" strokeWidth="0.0" text="Genere:" wrappingWidth="222.66665649414074" AnchorPane.topAnchor="395.0">
+      <font>
+         <Font name="System Bold" size="12.0" />
+      </font>
+   </Text>
+   <Text id="Numero pagine" fx:id="textNumeroPagineId" layoutX="585.0" layoutY="409.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Numero pagine:" wrappingWidth="222.66665649414074" AnchorPane.topAnchor="396.05078125">
+      <font>
+         <Font name="System Bold" size="12.0" />
+      </font>
+   </Text>
+   <Text id="tipoA" fx:id="textTIpoId" layoutX="585.0" layoutY="424.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tipo:" wrappingWidth="222.66665649414074" AnchorPane.topAnchor="411.05078125">
+      <font>
+         <Font name="System Bold" size="12.0" />
+      </font>
+   </Text>
+   <Text id="Materia" fx:id="textMateriaId" layoutX="101.0" layoutY="604.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Materia:" visible="false" wrappingWidth="700.0" AnchorPane.topAnchor="591.0">
+      <font>
+         <Font name="System Bold" size="12.0" />
+      </font>
+   </Text>
+   <Text id="Descrizione" fx:id="textDescrizioneId" layoutX="112.0" layoutY="175.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Descrizione:" textAlignment="JUSTIFY" wrappingWidth="700.0" AnchorPane.topAnchor="162.05078125">
+      <font>
+         <Font name="System Bold" size="12.0" />
+      </font>
+   </Text>
+   <Text id="fruizione" fx:id="textFruizioneId" layoutX="585.0" layoutY="451.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Fruizione:" wrappingWidth="222.66665649414074" AnchorPane.topAnchor="438.05078125">
+      <font>
+         <Font name="System Bold" size="12.0" />
+      </font>
+   </Text>
+   <Text id="Data uscita" fx:id="textDataUscitaId" layoutX="120.0" layoutY="439.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Data Uscita:" wrappingWidth="222.66665649414062" AnchorPane.topAnchor="426.05078125">
+      <font>
+         <Font name="System Bold" size="12.0" />
+      </font>
+   </Text>
+   <Text id="Lingua" fx:id="textLinguianId" layoutX="120.0" layoutY="423.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Lingua:" wrappingWidth="222.66665649414074" AnchorPane.topAnchor="410.0">
+      <font>
+         <Font name="System Bold" size="12.0" />
+      </font>
+   </Text>
 
-      <Button fx:id="buttonSerieId" defaultButton="true" disable="true" layoutX="428.0" layoutY="665.0" mnemonicParsing="false" onAction="#setPreferito" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Serie" textAlignment="JUSTIFY" textFill="#0800f8" underline="true" visible="false">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Button>
-      <Button defaultButton="true" layoutX="729.0" layoutY="721.0" mnemonicParsing="false" onAction="#goToAquisto" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Acquisto" textFill="#0800f8" underline="true">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Button>
-      <Button fx:id="buttonSuccessivoId" defaultButton="true" disable="true" layoutX="259.0" layoutY="722.0" mnemonicParsing="false" onAction="#goToNext" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Successivo" textAlignment="JUSTIFY" textFill="#0800f8" underline="true" visible="false">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Button>
-      <Text id="Frasee" fx:id="textMessagioId" layoutX="202.0" layoutY="648.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Premi sull'id della serie per aggiungerla tra i preferiti" textAlignment="CENTER" visible="false" wrappingWidth="500.0">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font></Text>
-      <Text id="Editore" fx:id="txtEditoreId" layoutX="102.0" layoutY="533.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Editore:" wrappingWidth="700.0">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font></Text>
-      <Button fx:id="buttonPresentazioneid" defaultButton="true" disable="true" layoutX="101.0" layoutY="721.0" mnemonicParsing="false" onAction="#goToPresentazione" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Presentazione" textFill="#0800f8" underline="true" visible="false">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Button>
-      <Text id="Autore" fx:id="textAutoreId" layoutX="100.0" layoutY="605.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Autore:" textAlignment="RIGHT" wrappingWidth="700.0">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font></Text>
-   </children>
+   <Button fx:id="buttonSerieId" defaultButton="true" disable="true" layoutX="438.0" layoutY="493.0" mnemonicParsing="false" onAction="#setPreferito" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Serie" textAlignment="JUSTIFY" textFill="#0800f8" underline="true" visible="false">
+      <font>
+         <Font size="14.0" />
+      </font>
+   </Button>
+   <Button defaultButton="true" disable="true" layoutX="112.0" layoutY="338.0" mnemonicParsing="false" onAction="#goToAcquisto" prefHeight="29.0" prefWidth="127.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Dove Acquistarlo" textFill="#0800f8" underline="true">
+      <font>
+         <Font size="14.0" />
+      </font>
+   </Button>
+   <Button fx:id="buttonSuccessivoId" defaultButton="true" layoutX="410.0" layoutY="563.0" mnemonicParsing="false" onAction="#goToNext" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Successivo -&gt;" textAlignment="JUSTIFY" textFill="#0800f8" underline="true">
+      <font>
+         <Font size="14.0" />
+      </font>
+   </Button>
+   <Text id="Frasee" fx:id="textMessagioId" layoutX="203.0" layoutY="490.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Premi sull'id della serie per aggiungerla tra i preferiti" textAlignment="CENTER" visible="false" wrappingWidth="500.0">
+      <font>
+         <Font name="System Bold" size="12.0" />
+      </font>
+   </Text>
+   <Text id="Editore" fx:id="txtEditoreId" layoutX="585.0" layoutY="468.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Editore:" wrappingWidth="222.66665649414074">
+      <font>
+         <Font name="System Bold" size="12.0" />
+      </font>
+   </Text>
+   <Button fx:id="buttonPresentazioneid" defaultButton="true" disable="true" layoutX="259.0" layoutY="338.0" mnemonicParsing="false" onAction="#goToPresentazione" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Presentazione" textFill="#0800f8" underline="true">
+      <font>
+         <Font size="14.0" />
+      </font>
+   </Button>
+   <Text id="Autore" fx:id="textAutoreId" layoutX="585.0" layoutY="440.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Autore:" wrappingWidth="222.66665649414074">
+      <font>
+         <Font name="System Bold" size="12.0" />
+      </font>
+   </Text>
+   <TextArea fx:id="prova" editable="false" layoutX="112.0" layoutY="179.0" prefHeight="159.0" prefWidth="681.0" />
 </AnchorPane>
