--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/rivistaStage.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/rivistaStage.fxml
@@ -4,12 +4,16 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.RivistaController">
-   <children>
-      <Text fx:id="textNomeId" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nome" textAlignment="CENTER" wrappingWidth="250.0" />
-      <Text fx:id="textDataId" layoutX="4.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Data" textAlignment="CENTER" wrappingWidth="241.248046875" />
-      <Text fx:id="textResponsabileId" layoutX="-1.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Responsabile" textAlignment="CENTER" wrappingWidth="250.0" />
-      <Text fx:id="textArgomentoId" layoutY="121.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Argomento" textAlignment="CENTER" wrappingWidth="250.0" />
-      <Button  layoutX="103.0" layoutY="211.0" mnemonicParsing="false" onAction="#close" text="Close" />
-   </children>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0"
+            prefWidth="250.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.example.bibliotecadigitale.Controller.RivistaController">
+   <Text fx:id="textNomeId" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nome" textAlignment="CENTER"
+         wrappingWidth="250.0"/>
+   <Text fx:id="textDataId" layoutX="4.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Data"
+         textAlignment="CENTER" wrappingWidth="241.248046875"/>
+   <Text fx:id="textResponsabileId" layoutX="-1.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0"
+         text="Responsabile" textAlignment="CENTER" wrappingWidth="250.0"/>
+   <Text fx:id="textArgomentoId" layoutY="121.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Argomento"
+         textAlignment="CENTER" wrappingWidth="250.0"/>
+   <Button layoutX="103.0" layoutY="211.0" mnemonicParsing="false" onAction="#close" text="Close"/>
 </AnchorPane>
