--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/paginaInformativaLibro.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/paginaInformativaLibro.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="900.0" style="-fx-background-color: #fdf3ea; -fx-border-color: #964B00;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.LibroInformativaController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="900.0" style="-fx-background-color: #fdf3ea; -fx-border-color: #964B00;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.LibroInformativaController">
    <ImageView fx:id="imageLibriSfondo" fitHeight="795.0" fitWidth="900.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
    </ImageView>
    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fdf3ea" height="524.0" layoutX="106.66666666666666" layoutY="108.66666666666666" stroke="#de5f4f" strokeType="INSIDE" style="-fx-background-color: #fdf3ea;" width="700.0" AnchorPane.bottomAnchor="169.0" AnchorPane.leftAnchor="105.0" AnchorPane.rightAnchor="95.0" AnchorPane.topAnchor="107.0" />
@@ -69,7 +69,7 @@
          <Font size="14.0" />
       </font>
    </Button>
-   <Button defaultButton="true" disable="true" layoutX="112.0" layoutY="338.0" mnemonicParsing="false" onAction="#goToAcquisto" prefHeight="29.0" prefWidth="127.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Dove Acquistarlo" textFill="#0800f8" underline="true">
+   <Button fx:id="buttonAquistoId" defaultButton="true" disable="true" layoutX="112.0" layoutY="338.0" mnemonicParsing="false" onAction="#goToAcquisto" prefHeight="29.0" prefWidth="127.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Dove Acquistarlo" textFill="#0800f8" underline="true">
       <font>
          <Font size="14.0" />
       </font>
