--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/homeStageAdmin.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/homeStageAdmin.fxml
@@ -36,8 +36,8 @@
             <TableColumn fx:id="datauscitaLibro" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="DataUscita" />
             <TableColumn fx:id="linguaLibro" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="Lingua ☑" />
             <TableColumn fx:id="successivoLibro" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="Successivo" />
-            <TableColumn fx:id="serieLibro" onEditCommit="#onEditChangedInt" prefWidth="104.66671752929688" text="Serie" />
-            <TableColumn fx:id="presentazioneLibro" onEditCommit="#onEditChangedInt" prefWidth="104.66671752929688" text="Presentazione" />
+            <TableColumn fx:id="serieLibro" onEditCommit="#onEditChangedInteger" prefWidth="104.66671752929688" text="Serie" />
+            <TableColumn fx:id="presentazioneLibro" onEditCommit="#onEditChangedInteger" prefWidth="104.66671752929688" text="Presentazione" />
 
         </columns>
         <contextMenu>
@@ -62,7 +62,7 @@
             <TableColumn fx:id="editoreArticolo" onEditCommit="#onEditChangedString" prefWidth="105.33331298828125" text="Editore ☑" />
             <TableColumn fx:id="autoreArticolo" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="Autore ☑" />
             <TableColumn fx:id="linguaArticolo" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="Lingua ☑" />
-            <TableColumn fx:id="conferenzaArticolo" onEditCommit="#onEditChangedInt" prefWidth="104.66671752929688" text="Conferenza" />
+            <TableColumn fx:id="conferenzaArticolo" onEditCommit="#onEditChangedInteger" prefWidth="104.66671752929688" text="Conferenza" />
             <TableColumn fx:id="nomerArticolo" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="NomeRivista" />
             <TableColumn fx:id="datarArticolo" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="DataRivista" />
         </columns>
