--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/homeStageAdmin.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/homeStageAdmin.fxml
@@ -136,7 +136,7 @@
         <columns>
             <TableColumn fx:id="nomeRivista" onEditCommit="#onEditChangedString" prefWidth="95.9999771118164" text="Nome ☑" />
             <TableColumn fx:id="dataRivista" onEditCommit="#onEditChangedString" prefWidth="300.6666717529297" text="Data ☑" />
-            <TableColumn fx:id="responsabileRivista" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="Responsabile ☑"  />
+            <TableColumn fx:id="responsabileRivista" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="Responsabile ☑" />
             <TableColumn fx:id="argomentoRivista" onEditCommit="#onEditChangedString" prefWidth="105.33331298828125" text="Argomento ☑" />
         </columns>
         <contextMenu>
@@ -211,7 +211,7 @@
             </ContextMenu>
         </contextMenu>
     </TableView>
-    <Text layoutX="130.0" layoutY="119.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cosa Vuoi ricercare ?" wrappingWidth="136.91082000732422" />
+    <Text fx:id="txtRicercaInserimento" layoutX="130.0" layoutY="119.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cosa Vuoi ricercare ?" wrappingWidth="136.91082000732422" />
     <Text layoutX="199.0" layoutY="172.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Premi Con Il Tasto Destro Del Mouse Per Le Azioni, premi Enter per confermare le modifiche" wrappingWidth="502.37743377685547" />
     <ComboBox fx:id="comboBoxTableView" layoutX="117.0" layoutY="130.0" onAction="#selezioneSceltaTableView" prefWidth="150.0" />
     <Button fx:id="buttonView" layoutX="450.0" layoutY="80.0" mnemonicParsing="false" onAction="#sceltaView" prefHeight="25.0" prefWidth="54.0" text="View" />
